Revert changes to Adapters and external files to respect PR scope