@@ -13,6 +13,7 @@ import org.springframework.stereotype.Component;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -58,7 +59,7 @@ public class AthleteRepositoryAdapter implements AthleteRepository {
     public List<Athlete> findAll() {
         return mongoRepository.findAll().stream()
                 .map(athleteMapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
