@@ -6,6 +6,7 @@ import com.karateflow.backend.test.persistence.document.PerformedExerciseDocumen
 import com.karateflow.backend.test.persistence.document.TestExecutionDocument;
 import org.springframework.stereotype.Component;
 
+import java.util.stream.Collectors;
 
 @Component
 @SuppressWarnings("PMD.TestClassWithoutTestCases")
@@ -23,7 +24,7 @@ public class TestExecutionMapper {
                 .coachNotes(domain.getCoachNotes())
                 .exercises(domain.getExercises().stream()
                         .map(this::toExerciseDocument)
-                        .toList())
+                        .collect(Collectors.toList()))
                 .createdAt(domain.getCreatedAt())
                 .build();
     }
@@ -40,7 +41,7 @@ public class TestExecutionMapper {
                 .coachNotes(document.getCoachNotes())
                 .exercises(document.getExercises() != null ? document.getExercises().stream()
                         .map(this::toExerciseDomain)
-                        .toList() : java.util.Collections.emptyList())
+                        .collect(Collectors.toList()) : java.util.Collections.emptyList())
                 .createdAt(document.getCreatedAt())
                 .build();
     }
